configs/envoy/single.yaml
static_resources:
  listeners:
    - name: https_in
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 18443
      filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                alpn_protocols:
                  - http/1.1
                tls_certificates:
                  - certificate_chain:
                      filename: /opt/tako-performance/certs/bench.test.crt
                    private_key:
                      filename: /opt/tako-performance/certs/bench.test.key
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: bench_https
                codec_type: HTTP1
                use_remote_address: true
                common_http_protocol_options:
                  idle_timeout: 65s
                request_headers_timeout: 60s
                route_config:
                  name: bench_routes
                  virtual_hosts:
                    - name: bench
                      domains:
                        - bench.test
                        - bench.test:18443
                        - "*"
                      request_headers_to_add:
                        - header:
                            key: X-Forwarded-Proto
                            value: https
                          append_action: OVERWRITE_IF_EXISTS_OR_ADD
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: bench_app
                            timeout: 60s
                http_filters:
                  - name: envoy.filters.http.local_ratelimit
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      stat_prefix: bench_local_rate_limit
                      token_bucket:
                        max_tokens: 65535
                        tokens_per_fill: 65535
                        fill_interval: 1s
                      filter_enabled:
                        default_value:
                          numerator: 100
                          denominator: HUNDRED
                      filter_enforced:
                        default_value:
                          numerator: 100
                          denominator: HUNDRED
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: bench_app
      type: STATIC
      connect_timeout: 5s
      lb_policy: ROUND_ROBIN
      circuit_breakers:
        thresholds:
          - priority: DEFAULT
            max_connections: 1000000000
            max_pending_requests: 1000000000
            max_requests: 1000000000
            max_retries: 1000000000
            max_connection_pools: 1000000000
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
          common_http_protocol_options:
            idle_timeout: 65s
      load_assignment:
        cluster_name: bench_app
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9101

admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 0
